--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2nft",
+  "name": "xdp-playground",
   "version": "0.0.1",
   "description": "web application to use iptables-translate",
   "main": "index.js",
