systemd: add path to server file
This should now work.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/xdp-playground.service
+++ b/xdp-playground.service
@@ -2,7 +2,7 @@
 Description=A place to experiment with XDP
 
 [Service]
-ExecStart=/usr/local/bin/node /srv/app
+ExecStart=/usr/local/bin/node /srv/app/index.js
 Restart=always
 RestartSec=10
 StandardOutput=syslog
