systemd: set more values
Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/xdp-playground.service
+++ b/xdp-playground.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=A place to experiment with XDP
+After=network.target
 
 [Service]
+WorkingDirectory=/srv/app
+Type=forking
 ExecStart=/usr/local/bin/node /srv/app/index.js
 Restart=always
 RestartSec=10
