--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.0",
+    "marked": "^0.3.6",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {},
