public: reword first example compile setup
Still not functional

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/0/Makefile
+++ b/public/pages/0/Makefile
@@ -16,6 +16,8 @@ TEST_GEN_PROGS = test_run
 
 TEST_PROGS := test_kmod.sh
 
+TEST_GEN_FILES = xdp
+
 include ~/linux/tools/testing/selftests/lib.mk
 
 BPFOBJ := $(OUTPUT)/libbpf.a
