--- a/xdp-playground.service
+++ b/xdp-playground.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 WorkingDirectory=/srv/app
 Type=forking
-ExecStart=/usr/local/bin/node /srv/app/index.js
+ExecStart=/usr/bin/npm start
 Restart=always
 RestartSec=10
 StandardOutput=syslog
