--- a/public/pages/0/Makefile
+++ b/public/pages/0/Makefile
@@ -1,15 +1,15 @@
 KDIR ?= ~/linux
-LIBDIR := ~/linux/tools/lib
+LIBDIR := $(KDIR)/tools/lib
 BPFDIR := $(LIBDIR)/bpf
-APIDIR := ~/linux/tools/include/uapi
-GENDIR := ~/linux/include/generated
+APIDIR := $(KDIR)/tools/include/uapi
+GENDIR := $(KDIR)/include/generated
 GENHDR := $(GENDIR)/autoconf.h
 
 ifneq ($(wildcard $(GENHDR)),)
   GENFLAGS := -DHAVE_GENHDR
 endif
 
-CFLAGS += -Wall -O2 -I$(APIDIR) -I$(LIBDIR) -I$(GENDIR) $(GENFLAGS) -I~/linux/tools/include
+CFLAGS += -Wall -O2 -I$(APIDIR) -I$(LIBDIR) -I$(GENDIR) $(GENFLAGS) -I$(KDIR)/tools/include
 LDLIBS += -lcap -lelf
 
 TEST_GEN_PROGS = test_run
@@ -18,7 +18,7 @@ TEST_PROGS := test_kmod.sh
 
 TEST_GEN_FILES = xdp
 
-include ~/linux/tools/testing/selftests/lib.mk
+include $(KDIR)/tools/testing/selftests/lib.mk
 
 BPFOBJ := $(OUTPUT)/libbpf.a
 
@@ -35,6 +35,6 @@ $(BPFOBJ): force
 CLANG ?= clang
 
 %.o: %.c
-	$(CLANG) -I~/linux/tools/include/uapi -I~/linux/samples/bpf \
+	$(CLANG) -I$(KDIR)/tools/include/uapi -I$(KDIR)/samples/bpf \
 		-D__x86_64__ -Wno-compare-distinct-pointer-types \
 		-O2 -target bpf -c $< -o $@
