public/pages/0/Makefile: use installed kernel
This way we would only need to make sure the expected kernel is
installed.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/0/Makefile
+++ b/public/pages/0/Makefile
@@ -1,4 +1,4 @@
-KDIR ?= ~/linux
+KDIR ?= /lib/modules/$(shell uname -r)/build
 LIBDIR := $(KDIR)/tools/lib
 BPFDIR := $(LIBDIR)/bpf
 APIDIR := $(KDIR)/tools/include/uapi
